...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Draw_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:hint="날짜를 선택하시오"
            android:fontFamily="@font/bmjua"
            android:textSize="20dp" />

        <Button
            android:id="@+id/Draw_Weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:fontFamily="@font/bmjua"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <ImageButton
                android:background="@android:color/transparent"
                android:id="@+id/save_btn"
                android:scaleType="fitCenter"
                android:src="@drawable/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <ImageButton
                android:background="@android:color/transparent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/paint_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/color1"
...
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:background="#FF009900"
                    android:tag="#FF009900" />

                <ImageButton
                    android:id="@+id/color6"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:background="#0044ff"
                    android:tag="#0044ff" />
                <ImageButton
                    android:id="@+id/color7"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="2dp"
                    android:background="#18067e"
                    android:tag="#18067e" />
                <ImageButton
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/drawContents"
                android:layout_width="350dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:background="@drawable/custome_edit_text"
                android:padding="15dp" />
        </LinearLayout>
...
