...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:padding="10dp">

        <RadioGroup
            android:id="@+id/emoGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/emoHappy"
                android:drawableLeft="@drawable/happy_64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/gray"

                android:gravity="center" />

            <RadioButton
                android:id="@+id/emoAngry"
                android:drawableLeft="@drawable/angry_64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/gray"
                android:gravity="center" />

            <RadioButton
                android:id="@+id/emoSad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/sad_64"
                android:background="@color/gray"
                android:gravity="center" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/todayText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
...
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ea4c88"
            android:text="확인"
            android:textColor="@color/white"
            android:fontFamily="@font/bmjua"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
...
