...
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/calToolbarSina"
        android:background="@color/toolBarPink"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="75dp"
...
            android:src="@drawable/flower2"
            android:layout_gravity="right"
            android:paddingRight="25dp"/>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10px"
        android:layout_marginRight="10px"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="pre"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
...
