...
    <string name="hint_name">이름을 입력하세요</string>
    <string name="hint_Email">Email ID를 입력하세요</string>
    <string name="hint_password">Password를 입력하세요</string>
    <string name="hint_phone">휴대폰번호를 입력하세요</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="open">drawer open</string>
    <string name="close">drawer close</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="server_client_id">300204036921-a9lfoq88eq514mcrijbvssdtprhkhmo5.apps.googleusercontent.com</string>

    <string name="signed_in_fmt">%s 로 로그인</string>
    <string name="signed_in">로그인</string>
    <string name="signing_in">로그인 중…</string>
    <string name="signed_out">로그아웃</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

...
